<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.campusrelay.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.campusrelay.ui.home.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/createDeliveryFragment"
        android:name="com.example.campusrelay.ui.delivery.CreateDeliveryFragment"
        android:label="@string/create_delivery_title"
        tools:layout="@layout/fragment_create_delivery" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.campusrelay.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>
